fix scrollbar jumping in/out between transition

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -25,6 +25,8 @@ body {
   font-family: Roboto, var(--font-family-sans-serif);
   background-color: black;
   color: white;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 h1, h2, h3, h4, h5, h6 {
